--- a/Meine Bibliothek.bib
+++ b/Meine Bibliothek.bib
@@ -1,27 +1,39 @@
-
-@misc{hui_archivist_2013,
-	title = {Archivist Manifesto},
-	url = {http://www.metamute.org/editorial/lab/archivist-manifesto},
-	language = {english},
-	journal = {Metamute.org},
-	author = {Hui, Yuk},
-	month = may,
-	year = {2013},
-	annote = {Archivar Manifest ist ein Aufruf für die Wiedereinsetzung des Wissens und der Fähigkeiten zur Entwicklung der persönlichen Archive bzw. der Selbst Archivierung. }
-}
-
-@misc{__????
-}
-
-@misc{center_for_history_and_new_media_schnelleinstieg_????,
-	title = {Schnelleinstieg},
-	url = {http://zotero.org/support/quick_start_guide},
-	author = {{Center for History and New Media}},
-	annote = {Willkommen bei {Zotero!Anhand} des Schnelleinstiegs lässt sich das Sammeln, Handhaben, Zitieren und Teilen von Quellen {erlernen.Vielen} Dank, dass Sie Zotero installiert haben.}
-}
-
-@book{__????-1
-}
-
-@misc{__????-2
-}
+	@@ -10,6 +10,15 @@
+ 		annote = {Archivar Manifest ist ein Aufruf für die Wiedereinsetzung des Wissens und der Fähigkeiten zur Entwicklung der persönlichen Archive bzw. der Selbst Archivierung. }
+ 	}
+ 	
++	@misc{hui_dr._????,
++		title = {Dr. Yuk Hui},
++		url = {http://homepages.gold.ac.uk/yukhui/},
++		language = {english},
++		journal = {Goldsmiths University of London},
++		author = {Hui, Yuk},
++		annote = {Die Seite gibt die Informationen über sein Studium, beruflichen Werdegang und seine Arbeit bzw. über seine Philosphie. Es gibt Links zu seinen Publikationen und Projekten.}
++	}
++	
+ 	@misc{__????
+ 	}
+ 	
+	@@ -23,5 +32,21 @@
+ 	@book{__????-1
+ 	}
+ 	
++	@misc{hui_philosophy_????,
++		title = {Philosophy of Digital Objects},
++		url = {http://digitalmilieu.net/},
++		journal = {Digital Milieu},
++		author = {Hui, Yuk},
++		annote = {Das ist seine Webseite, die über seine Philosophie der Digitalen Objekte und Selbst-Archiviereung ist.}
++	}
++	
++	@misc{hui_talk:_????,
++		type = {Digital Milieu},
++		title = {Talk: Contribution to a Political Economy of Self-Archiving},
++		url = {http://digitalmilieu.net/?p=536},
++		author = {Hui, Yuk},
++		annote = {In diesem Artikel geht es um den Vortrag {"Contribution} to a Political Economy of Self-Archiving" von Yuk Hui, der im Oktober in Toronto bei einer Konferenz vorgetragen wurde.}
++	}
++	
+ 	@misc{__????-2
+ 	}
+ 	 No newline at end of file
